feat(api): add endpoint `/clock`
